[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

axum       = { version = "0.7", features = ["ws"] }
tokio      = { version = "1",   features = ["full"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
futures    = "0.3"
fxhash = "0.2.1"